Changed the recycler view UI to be more minimal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="refresh">Refresh ⟳</string>
+    <string name="share">Share</string>
+    <string name="favourite">Favourite</string>
+    <string name="coin_image">Coin Image</string>
 </resources>
