--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="share">Share</string>
     <string name="favourite">Favourite</string>
     <string name="coin_image">Coin Image</string>
+    <string name="search_hint">Search by name or symbol</string>
+    <string name="search">Search</string>
 </resources>
