--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="coin_image">Coin Image</string>
     <string name="search_hint">Search by name or symbol</string>
     <string name="search">Search</string>
+    <string name="back">Back</string>
+    <string name="description">Description</string>
 </resources>
