--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Cryptocurrency-Tracker</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="refresh">Refresh ⟳</string>
+    <string name="refresh">Refresh</string>
     <string name="share">Share</string>
     <string name="favourite">Favourite</string>
     <string name="coin_image">Coin Image</string>
